welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:23: error: not found: type est
  setDirection(dir:est)
                   ^DwarfCode:23: error: not found: value dir
  setDirection(dir:est)
               ^DwarfCode:28: error: not found: type west
  setDirection(dir:west)
                   ^DwarfCode:28: error: not found: value dir
  setDirection(dir:west)
               ^DwarfCode:38: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return true
           ^DwarfCode:38: warning: enclosing method positionFinale has result type Unit: return value discarded
    return true
    ^DwarfCode:40: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  return false
         ^DwarfCode:40: warning: enclosing method positionFinale has result type Unit: return value discarded
  return false
  ^