welcome.lessons.welcome.summative.Moria.scala.code
def sortir(){
  while (positionFinale==false){
    deplacerBiscuit()
  }
  
}

/*def marcherVersEst(){
  if (getDirection()!=Direction.EST){
    droite()
    droite()
  }
}

def marcherVersOuest(){
  if(getDirection()!=Direction.Ouest){
    droite()
    droite()
  }
}*/

def deplacerBiscuit(){
  setDirection(dir:est)
  while (!estSurBiscuit()){
    avance()
  }
  prendBiscuit()
  setDirection(dir:west)
  while (!estSurBiscuit()){
    avance()
  }
  recule()
  poseBiscuit()
}

def positionFinale(){
  if (getCouleurSol==Color.GREEN){
    return true
  }
  return false
}